--- a/src/Css/Nav.css
+++ b/src/Css/Nav.css
@@ -11,6 +11,12 @@ nav {
   margin-right: 5px;
 }
 
-.items {
+.nav-items {
   margin: 0;
+  width: 100%;
+  font-size: 20px;
+  color: black;
+}
+p {
+  display: flex;
 }
