--- a/src/Css/cart.css
+++ b/src/Css/cart.css
@@ -1,3 +1,34 @@
 p {
   align-items: center;
 }
+.cart {
+  display: flex;
+  border: 1px solid black;
+  margin: 5px;
+  padding: 5px;
+  column-gap: 10px;
+}
+.prod-count {
+  display: flex;
+
+  align-self: center;
+  justify-content: center;
+}
+.btn-increment,
+.btn-decrement {
+  height: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  font-size: 15px;
+  background-color: lightblue;
+  color: red;
+}
+.side {
+  display: flex;
+  flex-direction: column;
+}
+.functions {
+  display: flex;
+}
