--- a/src/Css/header.css
+++ b/src/Css/header.css
@@ -91,8 +91,21 @@ input {
   width: 30px;
   height: 21px;
 }
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .toggle-button {
     display: block;
+  }
+  .menu {
+    display: block;
+  }
+  .links,
+  .item {
+    display: none;
+  }
+}
+
+@media (min-width: 700px) {
+  .menu {
+    display: none;
   }
 }
