--- a/src/Css/header.css
+++ b/src/Css/header.css
@@ -86,15 +86,6 @@ input {
   width: 30px;
   height: 21px;
 }
-@media (max-width: 700px) {
-  .menu {
-    display: block;
-  }
-  .links,
-  .item {
-    display: none;
-  }
-}
 
 @media (min-width: 700px) {
   .menu {
@@ -118,8 +109,43 @@ input {
   .inp-search {
     width: 30%;
   }
-
+  .Name {
+    display: none;
+  }
   .buttons {
     column-gap: 0px;
+  }
+}
+@media (max-width: 280px) {
+  .menu {
+    padding: 6px 10px;
+  }
+  .phone {
+    display: flex;
+    column-gap: 20px;
+    margin-right: 5px;
+  }
+}
+@media (max-width: 768px) {
+  .phone {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    margin-right: 10px;
+  }
+  .links,
+  .item {
+    display: none;
+  }
+  .menu {
+    display: block;
+  }
+}
+@media (min-width: 768px) {
+  .webpc {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    margin-right: 10px;
   }
 }
