--- a/src/Css/header.css
+++ b/src/Css/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: lightcoral;
+  /* background-color: lightcoral; */
   display: flex;
   align-items: center;
   column-gap: 10px;
