--- a/src/Css/products.css
+++ b/src/Css/products.css
@@ -1,27 +1,27 @@
 .Body {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
   background-color: aquamarine;
   align-items: center;
   height: 100%;
   row-gap: 5px;
   width: 100%;
 }
-
-.products {
+.box {
+}
+/* .products {
   width: 80%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   column-gap: 10px;
   row-gap: 10px;
   flex-wrap: wrap;
   background-color: lightblue;
-}
+} */
 
-.items {
+/* .items {
   width: 100%;
-}
+} */
 p {
   margin: 0;
 }
