--- a/src/Css/products.css
+++ b/src/Css/products.css
@@ -6,30 +6,38 @@
   height: 100%;
   row-gap: 5px;
   width: 100%;
+  justify-content: center;
+  align-content: center
 }
-.box {
-}
-/* .products {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  column-gap: 10px;
-  row-gap: 10px;
-  flex-wrap: wrap;
-  background-color: lightblue;
-} */
 
-/* .items {
-  width: 100%;
-} */
+
 p {
   margin: 0;
 }
+@media (min-width:769px){
+.foot{
+  position: absolute;
+  left: 50%;
+  bottom: 0%;
+}
 
-@media (max-width: 760px) {
+}
+
+@media (max-width: 768px) {
   .products {
+    display: flex;
+    justify-content: center;
     flex-direction: column;
     width: 20%;
     align-items: center;
+
+  }
+  .items{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-self: center;
+   margin-bottom: 20px;
   }
 }
