--- a/src/Css/header.css
+++ b/src/Css/header.css
@@ -5,10 +5,11 @@
   column-gap: 10px;
   justify-content: space-between;
   height: 50px;
+  padding: 0px 10px;
 }
 img {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
 }
 input {
   height: 30px;
