--- a/src/Css/products.css
+++ b/src/Css/products.css
@@ -7,20 +7,13 @@
   row-gap: 5px;
   width: 100%;
   justify-content: center;
-  align-content: center
+  align-content: center;
 }
-
 
 p {
   margin: 0;
 }
-@media (min-width:769px){
-.foot{
-  position: absolute;
-  left: 50%;
-  bottom: 0%;
-}
-
+@media (min-width: 769px) {
 }
 
 @media (max-width: 768px) {
@@ -30,14 +23,13 @@ p {
     flex-direction: column;
     width: 20%;
     align-items: center;
-
   }
-  .items{
+  .items {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
     align-self: center;
-   margin-bottom: 20px;
+    margin-bottom: 20px;
   }
 }
