--- a/src/Css/Nav.css
+++ b/src/Css/Nav.css
@@ -5,7 +5,7 @@ nav {
   height: 30px;
   justify-content: center;
   align-self: center;
-  width: 300px;
+  width: 80%;
   /* background-color: aqua; */
   margin-left: 5px;
   margin-right: 5px;
