--- a/src/Css/Nav.css
+++ b/src/Css/Nav.css
@@ -2,21 +2,38 @@ nav {
   display: flex;
   flex-direction: row;
   column-gap: 30px;
-  height: 30px;
+  height: 60px;
   justify-content: center;
   align-self: center;
   width: 80%;
   /* background-color: aqua; */
   margin-left: 5px;
   margin-right: 5px;
+  text-decoration: none;
+  border: none;
+  background: none;
 }
 
-.nav-items {
-  margin: 0;
-  width: 100%;
-  font-size: 20px;
+nav a {
+  display: flex;
+  margin-top: 1rem;
+  font-size: 15px;
   color: black;
 }
-p {
-  display: flex;
+
+nav a:hover {
+  color: brown;
+  transition: 200ms;
+  font-size: 25px;
+}
+
+.active {
+  color: brown;
+  transition: 200ms;
+  font-size: 22px;
+}
+.pending {
+  color: brown;
+  transition: 200ms;
+  font-size: 10px;
 }
