--- a/src/Css/slider.css
+++ b/src/Css/slider.css
@@ -1,23 +1,22 @@
 .slider {
   position: relative;
-  height: 100vh;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
 }
 
 .image {
-  width: 50px;
-  height: 50px;
+  width: 15rem;
+
   border-radius: 10px;
 }
 
 .right-arrow {
   position: absolute;
   top: 50%;
-  right: 50px;
-  font-size: 2rem;
+  right: 0px;
+  font-size: 1rem;
   color: #000;
   z-index: 10;
   cursor: pointer;
@@ -27,8 +26,8 @@
 .left-arrow {
   position: absolute;
   top: 50%;
-  left: 50px;
-  font-size: 2rem;
+  left: 0px;
+  font-size: 1rem;
   color: #000;
   z-index: 10;
   cursor: pointer;
