--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(13, 12, 12, 0.87);
-  background-color: white;
+  background-color: beige;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -59,6 +59,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
