--- a/src/Css/home.css
+++ b/src/Css/home.css
@@ -2,12 +2,12 @@
   display: grid;
   gap: 1.5rem;
   grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1.5fr 0.5fr;
+  grid-template-areas:
+    "welc  phone"
+    "logos logos";
 }
 
-.span-2 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
 .images {
   display: grid;
   align-content: center;
@@ -23,4 +23,39 @@
   background-color: #d1bb91;
   border: solid 1px transparent;
   border-radius: 20px;
+}
+.first {
+  grid-area: welc;
+}
+.second {
+  grid-area: phone;
+}
+.third {
+  grid-area: logos;
+}
+@media screen and (max-width: 768px) {
+  .Contents {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 3fr 5fr;
+    grid-template-areas:
+      "welc"
+      "phone"
+      "logos";
+  }
+  .chose {
+    grid-template-columns: 1fr;
+  }
+  .third {
+    grid-template-columns: 1fr;
+  }
+  .choosing {
+    width: 50% !important;
+    height: 150px !important;
+  }
+}
+@media screen and (max-width: 320px) {
+  .Contents {
+    grid-template-rows: 3fr 2fr;
+  }
 }
