--- a/src/Css/slider.css
+++ b/src/Css/slider.css
@@ -39,7 +39,7 @@
   transition-duration: 1s ease;
 }
 
-.slide.active {
+.slide_active {
   opacity: 1;
   transition-duration: 1s;
   transform: scale(1.08);
